--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="header__container _container">
+			<div class="header__container">
 				<div class="header__body">
 					<a href="#" class="header__logo">
 						<img src="img/Logo.png" alt="logo">
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 		</header>
-		<div class="card-slider swiper _container">
+		<div class="card-slider swiper card-slider__container">
 			<div class="card-slider__wrapper swiper-wrapper">
 				<div class="card-slider__slide swiper-slide">
 					<div class="card-slider__body">
@@ -67,6 +67,7 @@
 			<div class="card-slider__prev"></div>
 			<div class="card-slider__next">Как это работает?</div>
 			<div class="swiper-pagination card-slider__pag"></div>
+			<div class="swiper-pagination-bullet"></div>
 		</div>
 	</div>
 
