--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/iconsfont.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="scss/style.scss">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth,wght,XTRA@8..144,151,550,499;8..144,151,750,499;8..144,151,950,499&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<title>Тестовое задание</title>
 </head>
